djunin/static/site.css
/*!
 * IE10 viewport hack for Surface/desktop Windows 8 bug
 * Copyright 2014-2015 Twitter, Inc.
 * Licensed under MIT (https://github.com/twbs/bootstrap/blob/master/LICENSE)
 */

/*
 * See the Getting Started docs for more information:
 * http://getbootstrap.com/getting-started/#support-ie10-width
 */
@-webkit-viewport { width: device-width; }
@-moz-viewport    { width: device-width; }
@-ms-viewport     { width: device-width; }
@-o-viewport      { width: device-width; }
@viewport         { width: device-width; }


/*
* Dashboard.css
*/

/*
 * Base structure
 */
/* Move down content because we have a fixed navbar that is 50px tall */
body {
  padding-top: 50px;
}

/*
 * Global add-ons
 */
.sub-header {
  padding-bottom: 10px;
  border-bottom: 1px solid #eee;
}

/*
 * Top navigation
 * Hide default border to remove 1px line.
 */
.navbar-fixed-top {
  border: 0;
}

/*
 * Sidebar
 */

/* Hide for mobile, show later */
.sidebar {
  display: none;
}
@media (min-width: 768px) {
  .sidebar {
    position: fixed;
    top: 51px;
    bottom: 0;
    left: 0;
    z-index: 1000;
    display: block;
    padding: 20px;
    overflow-x: hidden;
    overflow-y: auto; /* Scrollable contents if viewport is shorter than content. */
    background-color: #f5f5f5;
    border-right: 1px solid #eee;
  }
}

/* Sidebar navigation */
.nav-sidebar {
  margin-right: -21px; /* 20px padding + 1px border */
  margin-bottom: 20px;
  margin-left: -20px;
}
.nav-sidebar > li > a {
  padding-right: 20px;
  padding-left: 20px;
}
.nav-sidebar > .active > a,
.nav-sidebar > .active > a:hover,
.nav-sidebar > .active > a:focus {
  color: #fff;
  background-color: #428bca !important;
}


/*
 * Main content
 */

.main {
  padding: 20px;
}
@media (min-width: 768px) {
  .main {
    padding-right: 40px;
    padding-left: 40px;
  }
}
.main .page-header {
  margin-top: 0;
}


/*
 * Placeholder dashboard ideas
 */

.placeholders {
  margin-bottom: 30px;
  text-align: center;
}
.placeholders h4 {
  margin-bottom: 0;
}
.placeholder {
  margin-bottom: 20px;
}
.placeholder img {
  display: inline-block;
  border-radius: 50%;
}

.login-form { max-width: 400px; }


/* from content/styles.css of jQuery.Autocomplete */
.autocomplete-suggestions { border: 1px solid #999; background: #FFF; cursor: default; overflow: auto; -webkit-box-shadow: 1px 4px 3px rgba(50, 50, 50, 0.64); -moz-box-shadow: 1px 4px 3px rgba(50, 50, 50, 0.64); box-shadow: 1px 4px 3px rgba(50, 50, 50, 0.64); }
.autocomplete-suggestion { padding: 2px 5px; white-space: nowrap; overflow: hidden; }
.autocomplete-no-suggestion { padding: 2px 5px;}
.autocomplete-selected { background: #F0F0F0; }
.autocomplete-suggestions strong { font-weight: bold; color: #000; }
.autocomplete-group { padding: 2px 5px; }
.autocomplete-group strong { font-weight: bold; font-size: 16px; color: #000; display: block; border-bottom: 1px solid #000; }


html { overflow-y: scroll; }

.sidebar > ul > li > ul > li > a  { padding-left: 25px; }
.sidebar > ul > li > ul > li > ul > li > a  { padding-left: 30px; }
.sidebar li.active > a:first-child { background-color: #eee; }

a.nav-group-node { font-size: 12px; padding-top: 7px !important; padding-bottom: 7px !important; }

.graph-title { text-align: center; }

.djunin-graph { height: 240px; }

.djunin-graph-legend {
	margin-left: 50px;
	margin-bottom: 30px;
}

.djunin-graph-legend td:first-child {
	width: 10px;
}

.djunin-graph-legend .color {
	width: 0.85em;  /* matches the font-size:85% of <small> */
	height: 0.85em;
	display: inline-block;
	margin-right: 5px;
}

.djunin-graph-legend td:first-child,
.djunin-graph-legend td:nth-child(2) { text-align: left; }

.djunin-graph-legend > table > tbody > tr > th,
.djunin-graph-legend > table > tbody > tr > td {
	padding: inherit;
	font-size: 85%;
	border-top: none;
	text-align: right;
	font-weight: normal;
}

.djunin-graph-legend > table > tbody > tr:first-child:hover { background-color: inherit; }
.djunin-graph-legend > table > tbody > tr:hover {
	background-color: #f8f8f8;
}

.datarow-min,
.datarow-max,
.datarow-current { text-align: right; padding-right: 0px; }

@media (max-width: 768px) {
	.main h1.page-header { font-size: 26px; }

	.main ul { padding-left: 20px; }
}


.axis path,
.axis line {
  fill: none;
  stroke: #000;
  shape-rendering: crispEdges;
}
/*
.x.axis path {
}
*/


.axis text {
	font-size: smaller;
	fill: rgb(84, 84, 84);
	shape-rendering: crispEdges;
}


g.x .tick line,
g.y .tick line {
	stroke: lightgray;
}

.zero path {stroke: #707070;}

.line {
  fill: none;
  stroke: steelblue;
  stroke-width: 1.5px;
  stroke-rendering: crispEdges;
}

/* path.highlighted { stroke-width: 2; stroke-dasharray: 1; } */

/* as per rrdgraph */
path.line1 { stroke-width: 1.3px; }
path.line2 { stroke-width: 2px; }
path.line3 { stroke-width: 3px; }
path.line1.highlighted { stroke-width: 2px; }
path.line2.highlighted { stroke-width: 3px; }
path.line3.highlighted { stroke-width: 4px; }

table.permissions-table th:first-child {
    width: 60%;
}
table.permissions-table td:first-child {
    padding-left: 20px;
}

